--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <tr>
           <td style="padding:2.5%;text-align:center">
             <p style="text-align:center">
-              <name><strong>Veronica Qing Lyu</strong></name>
+              <name><strong>Yue Yang (杨樾)</strong></name>
             </p>
             <a href="images/portrait.jpg"><img style="width: 80%" src="images/portrait.jpg"></a>
             <font color="grey" size="1"> </font>
             <p style="text-align:center">
-              <email> Email: yueyang1 [at] sas.upenn.edu</email>
+              <email> Email: yueyang1 [at] seas.upenn.edu</email>
             </p>
             <p style="text-align:center">
 
