--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
               <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp|&nbsp
               <a href="https://github.com/YueYANG1996">Github</a> &nbsp|&nbsp
+              <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp|&nbsp
+              <a href="linkedin.com/in/yue-yang-4b2075174">Linkedin</a> &nbsp|&nbsp
               <a href="cv.pdf">CV</a>
             </p>
           </td>
