--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
               <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp|&nbsp
               <a href="https://github.com/YueYANG1996">Github</a> &nbsp|&nbsp
-              <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp|&nbsp
+              <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a>
               <a href="linkedin.com/in/yue-yang-4b2075174">Linkedin</a> &nbsp|&nbsp
+              <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp|&nbsp
               <a href="cv.pdf">CV</a>
             </p>
           </td>
@@ -59,7 +60,7 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <td style="padding:20px;padding-top:70px;width:100%;vertical-align:middle">
                 <heading><strong>About</strong></heading>
-                <p class="light"><em>Hi!</em>  My name is Yue Yang (杨樾). I am a second PhD student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
+                <p class="light"><em>Hi!</em>  My name is Yue Yang (杨樾). I am a second year PhD student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
                 </p>
                 <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focus on the schema induction via multimodal information.
                 </p>
@@ -74,7 +75,7 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                 <td style="padding:20px;padding-top:10px;width:100%;vertical-align:middle">
-                  <heading><strong>Research</strong></heading>
+                  <heading><strong>Publications</strong></heading>
                 </td>
             </tbody></table>
        
@@ -86,19 +87,44 @@
                   <br>
                   <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
                   <br>
-                To appear in <a href="https://2021.emnlp.org/"><em>EMNLP</em> 2021.</a>; presented at the <a href="https://alvr-workshop.github.io/">2nd Workshop on Advances in Language and Vision Research</a> at <a href="https://2021.naacl.org/">NAACL 2021</a>. [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
+                In Proceedings of <a href="https://2021.emnlp.org/"><em>EMNLP</em> 2021.</a> [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
                 </td>
-              </tr> 
-            </tbody></table>
+              </tr>
 
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <td style="padding:20px;padding-top:70px;width:100%;vertical-align:middle">
-                <heading><strong>Miscellaneous</strong></heading>
-                <p class="light">
-                </p>
-              </td>
-            </tbody></table>
+              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
+                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
+                    <papertitle><strong>Optimization of the automotive air conditioning strategy based on the study of dewing phenomenon and defogging progress</strong>
+                    </papertitle> 
+                  <br>
+                  <strong>Yue Yang</strong>, Yuqi Huang and Jisheng Zhao
+                  <br>
+                Applied Thermal Engineering 169 (2020): 114932. [<a href="https://www.researchgate.net/profile/Yuqi-Huang-3/publication/338639197_Optimization_of_the_automotive_air_conditioning_strategy_based_on_the_study_of_dewing_phenomenon_and_defogging_progress/links/604ac01a299bf1f5d840df9a/Optimization-of-the-automotive-air-conditioning-strategy-based-on-the-study-of-dewing-phenomenon-and-defogging-progress.pdf">paper</a>][<a href="bib/yang2020optimization.bib">bibtex</a>]
+                </td>
+              </tr>
 
+              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
+                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
+                    <papertitle><strong>Analysis on the influence of gap flow around a tractor-trailer</strong>
+                    </papertitle> 
+                  <br>
+                  <strong>Yue Yang</strong>, Jinxing Chen, Yuqi Huang*, Jiangang Chen and Yuan Ji
+                  <br>
+                13th International Conference on Heat Transfer, Fluid Mechanics and Thermodynamics. [<a href="https://repository.up.ac.za/bitstream/handle/2263/62360/Yang_Analysis_2017.pdf?sequence=1">paper</a>][<a href="bib/yang2017analysis.bib">bibtex</a>]
+                </td>
+              </tr>
+
+              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
+                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
+                    <papertitle><strong>Analysis on the influence of gap flow around a tractor-trailer</strong>
+                    </papertitle> 
+                  <br>
+                  Yuan Ji, Jiangang Chen, Jiaqi Xing, Yuqi Huang, Jinxing Chen and <strong>Yue Yang</strong>*
+                  <br>
+                13th International Conference on Heat Transfer, Fluid Mechanics and Thermodynamics. [<a href="https://repository.up.ac.za/bitstream/handle/2263/62388/Ji_Computational_2017.pdf?sequence=1">paper</a>][<a href="bib/ji2017computational.bib">bibtex</a>]
+                </td>
+              </tr>
+              
+            </tbody></table>
           </td>
         </td>
     </tbody></table>
