--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focus on the schema induction via multimodal information.
                 </p>
                 <p>
-                  Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. During undergrads, I worked with <a href="https://person.zju.edu.cn/en/0010729"> Yuqi Huang</a> to study Computational Fluid Dynamics (CFD).
+                  Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. During undergrads, I worked with <a href="https://person.zju.edu.cn/en/0010729"> Prof. Yuqi Huang</a> to study Computational Fluid Dynamics (CFD).
                 </p>
                 <p>
-                  I was initially admitted by Penn as a master student in <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/"> Robotics</a> in 2018. Now I switch to Artificial Intelligence and temporarily farewell to hardware (Not completely True, I designed a sensor pack for R2D2 which will be used by students of <a href="http://artificial-intelligence-class.org/r2d2_assignments/20fall/hw0/sensor-pack-setup.html">  CIS-521 </a>).
+                  I was initially admitted by Penn as a master student in <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/"> Robotics</a> in 2018. Now I switch to Artificial Intelligence and temporarily farewell to the hardware (Not completely True, I designed a sensor pack for R2D2 which will be used by students of <a href="http://artificial-intelligence-class.org/r2d2_assignments/20fall/hw0/sensor-pack-setup.html"> CIS-521</a>).
                 </p>
               </td>
             </tbody></table>
