--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
               <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
                 <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
-                    <papertitle><strong>Analysis on the influence of gap flow around a tractor-trailer</strong>
+                    <papertitle><strong>A computational fluid dynamics study of air entrance s influence on the air resistance of ahmed reference body</strong>
                     </papertitle> 
                   <br>
                   Yuan Ji, Jiangang Chen, Jiaqi Xing, Yuqi Huang, Jinxing Chen and <strong>Yue Yang</strong>*
