--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <br>
                   <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
                   <br>
-                In Proceedings of <a href="https://2021.emnlp.org/"><em>EMNLP</em> 2021.</a> [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
+                In Proceedings of <a href="https://2021.emnlp.org/"><em>EMNLP</em> 2021.</a> [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="https://www.youtube.com/watch?v=V3Y_56ykG54&t=11s">talk</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
                 </td>
               </tr>
 
