--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
                 <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
+                    <papertitle><strong>Induce, Edit, Retrieve: Language Grounded Multimodal Schema for Instructional Video Retrieval</strong>
+                    </papertitle> 
+                  <br>
+                  <strong>Yue Yang</strong>, Joongwon Kim, Artemis Panagopoulou, Mark Yatskar and Chris Callison-Burch
+                Preprint 2021.</a> [<a href="https://arxiv.org/abs/2111.09276">paper</a>]
+              </tr>
+
+              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
+                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
                     <papertitle><strong>Visual Goal-Step Inference using wikiHow</strong>
                     </papertitle> 
                   <br>
