--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <br>
                   <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
                   <br>
-                In Proceedings of <a href="https://2021.emnlp.org/"><em>EMNLP</em> 2021.</a> [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="https://www.youtube.com/watch?v=V3Y_56ykG54&t=11s">talk</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
+                In Proceedings of <a href="https://aclanthology.org/2021.emnlp-main.165/"><em>EMNLP</em> 2021.</a> [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="https://www.youtube.com/watch?v=V3Y_56ykG54&t=11s">talk</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
                 </td>
               </tr>
 
@@ -135,6 +135,15 @@
               </tr>
               
             </tbody></table>
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <td style="padding:20px;padding-top:10px;width:100%;vertical-align:middle">
+                  <heading><strong>Talks</strong></heading>
+                </td>
+            </tbody></table>
+
+            November 22, 2021, CLUNCH (University of Pennsylvania), Investigate Procedural Events in a Multimodal Fashion
+
           </td>
         </td>
     </tbody></table>
