--- a/index.html
+++ b/index.html
@@ -1,65 +1,43 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  
-<link href='https://fonts.googleapis.com/css?family=Lustria:n,i,b,bi' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Verdana:n,i,b,bi' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Helvetica:n,i,b,bi' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=sans+serif:n,i,b,bi' rel='stylesheet' type='text/css'>
+<!-- Template from Jon Barron -->
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Yue Yang 杨樾</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111341597-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-111341597-1');
+    </script>
+  </head>
+  <body>
+    <table width="800" border="0" align="center" cellspacing="0" cellpadding="0">
+      <tr>
+        <td>
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td width="69%" valign="middle">
+              <name>Yue Yang (杨樾)</name><br>
+              pronounced as <i>yoo-eh</i><br><br>
+              Moore 103 (SIG Lab), 3300 Walnut St<br>Philadelphia, PA 19104, USA<br>
+              Email: yueyang1 [at] seas.upenn.edu<br><br>
+              <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp; / &nbsp; <a href="https://github.com/YueYANG1996">GitHub</a> &nbsp; / &nbsp; <a href="linkedin.com/in/yue-yang-4b2075174">LinkedIn</a> &nbsp; / &nbsp; <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp; / &nbsp; <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp; / &nbsp; <a href="cv.pdf">CV</a>
+            </td>
+            <td width="40%">
+              <img src="images/portrait.jpg" width="90%">
+            </td>
+          </tr>
+          </table>
 
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Yue Yang 杨樾</title>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170127392-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 
-  gtag('config', 'UA-170127392-1');
-</script>
-</head>
-
-
-
-<body>
-<div class="all-container">
-  <div class="float-a">
-    <table style="width:400px;border:0px;border-spacing:0px;border-collapse:separate;margin-left: auto; margin-right: auto;"><tbody>
-        <td style="padding:0px;text-align:center">
-        <tr>
-          <td style="padding:2.5%;text-align:center">
-            <p style="text-align:center">
-              <name><strong>Yue Yang (杨樾)</strong></name>
-            </p>
-            <a href="images/portrait.jpg"><img style="width: 80%" src="images/portrait.jpg"></a>
-            <font color="grey" size="1"> </font>
-            <p style="text-align:center">
-              <email> Email: yueyang1 [at] seas.upenn.edu</email>
-            </p>
-            <p style="text-align:center">
-
-              <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp|&nbsp
-              <a href="https://github.com/YueYANG1996">Github</a> &nbsp|&nbsp
-              <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a>
-              <a href="linkedin.com/in/yue-yang-4b2075174">Linkedin</a> &nbsp|&nbsp
-              <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp|&nbsp
-              <a href="cv.pdf">CV</a>
-            </p>
-          </td>
-        </tr>
-        </td>
-    </tbody></table>
-  </div>
-
-  <div class="float-b">
-    <table style="width:800px; max-width: 100vw; border:0px;border-spacing:0px;border-collapse:separate;"><tbody>
-        <td style="padding:0px">
-          <td style="padding:1%;vertical-align:top">
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <td style="padding:20px;padding-top:70px;width:100%;vertical-align:middle">
-                <heading><strong>About</strong></heading>
+          <!-- About me -->
+          <tr>
+            <td width="100%" valign="middle">
+              <heading>About me</heading><br><br>
                 <p class="light"><em>Hi!</em>  My name is Yue Yang (杨樾). I am a second year PhD student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
                 </p>
                 <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focus on the schema induction via multimodal information.
@@ -70,85 +48,70 @@
                 <p>
                   I was initially admitted by Penn as a master student in <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/"> Robotics</a> in 2018. Now I switch to Artificial Intelligence and temporarily farewell to the hardware (Not completely True, I designed a sensor pack for R2D2 which will be used by students of <a href="http://artificial-intelligence-class.org/r2d2_assignments/20fall/hw0/sensor-pack-setup.html"> CIS-521</a>).
                 </p>
+            </td>
+          </tr>
+          </table>
+
+          <!-- Publications & Manuscripts -->
+            <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+            <tr>
+              <td width="40%" valign="middle">
+                <heading>Publications & Manuscripts</heading>
               </td>
-            </tbody></table>
+            </tr>
+            <tr>
+              <td width="40%">
+                <img src="images/pipeline_small.pdf" width="100%">
+              </td>
+              <td width="60%" valign="middle">
+                <div class="title">
+                  <a href="papers/IER.pdf"><b>Induce, Edit, Retrieve: Language Grounded Multimodal Schema for Instructional Video Retrieval</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Joongwon Kim, Artemis Panagopoulou, Mark Yatskar and Chris Callison-Burch
+                </div>
+                <div class="venue">
+                  <i>Preprint</i>, 2021
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2111.09276">arxiv</a> / 
+                </div>
+              </td>
+            </tr>
 
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-                <td style="padding:20px;padding-top:10px;width:100%;vertical-align:middle">
-                  <heading><strong>Publications</strong></heading>
-                </td>
-            </tbody></table>
-       
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
-                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
-                    <papertitle><strong>Induce, Edit, Retrieve: Language Grounded Multimodal Schema for Instructional Video Retrieval</strong>
-                    </papertitle> 
-                  <br>
-                  <strong>Yue Yang</strong>, Joongwon Kim, Artemis Panagopoulou, Mark Yatskar and Chris Callison-Burch
-                  <br>
-                Preprint 2021.</a> [<a href="https://arxiv.org/abs/2111.09276">paper</a>]
-              </tr>
+            <tr>
+              <td width="40%">
+                <img src="images/VGSI.png" width="100%">
+              </td>
+              <td width="60%" valign="middle">
+                <div class="title">
+                  <a href="papers/VGSI.pdf"><b>Visual Goal-Step Inference using wikiHow</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
+                </div>
+                <div class="venue">
+                  <i>Conference on Empirical Methods in Natural Language Processing(<b>EMNLP</b>)</i>, 2021
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2104.05845">arxiv</a> / 
+                  <a href="https://github.com/YueYANG1996/wikiHow-VGSI">github</a>
+                </div>
+              </td>
+            </tr>
+          </table>
 
-              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
-                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
-                    <papertitle><strong>Visual Goal-Step Inference using wikiHow</strong>
-                    </papertitle> 
-                  <br>
-                  <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
-                  <br>
-                In Proceedings of <a href="https://aclanthology.org/2021.emnlp-main.165/"><em>EMNLP</em> 2021.</a> [<a href="https://arxiv.org/abs/2104.05845">paper</a>][<a href="https://www.youtube.com/watch?v=V3Y_56ykG54&t=11s">talk</a>][<a href="bib/yang2021visual.bib">bibtex</a>]
-                </td>
-              </tr>
-
-              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
-                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
-                    <papertitle><strong>Optimization of the automotive air conditioning strategy based on the study of dewing phenomenon and defogging progress</strong>
-                    </papertitle> 
-                  <br>
-                  <strong>Yue Yang</strong>, Yuqi Huang and Jisheng Zhao
-                  <br>
-                Applied Thermal Engineering 169 (2020): 114932. [<a href="https://www.researchgate.net/profile/Yuqi-Huang-3/publication/338639197_Optimization_of_the_automotive_air_conditioning_strategy_based_on_the_study_of_dewing_phenomenon_and_defogging_progress/links/604ac01a299bf1f5d840df9a/Optimization-of-the-automotive-air-conditioning-strategy-based-on-the-study-of-dewing-phenomenon-and-defogging-progress.pdf">paper</a>][<a href="bib/yang2020optimization.bib">bibtex</a>]
-                </td>
-              </tr>
-
-              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
-                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
-                    <papertitle><strong>Analysis on the influence of gap flow around a tractor-trailer</strong>
-                    </papertitle> 
-                  <br>
-                  <strong>Yue Yang</strong>, Jinxing Chen, Yuqi Huang*, Jiangang Chen and Yuan Ji
-                  <br>
-                13th International Conference on Heat Transfer, Fluid Mechanics and Thermodynamics. [<a href="https://repository.up.ac.za/bitstream/handle/2263/62360/Yang_Analysis_2017.pdf?sequence=1">paper</a>][<a href="bib/yang2017analysis.bib">bibtex</a>]
-                </td>
-              </tr>
-
-              <tr onmouseout="nerf_stop()" onmouseover="nerf_start()">
-                <td style="padding:20px;padding-top:0px;width:75%;vertical-align:middle">
-                    <papertitle><strong>A computational fluid dynamics study of air entrance s influence on the air resistance of ahmed reference body</strong>
-                    </papertitle> 
-                  <br>
-                  Yuan Ji, Jiangang Chen, Jiaqi Xing, Yuqi Huang, Jinxing Chen and <strong>Yue Yang</strong>*
-                  <br>
-                13th International Conference on Heat Transfer, Fluid Mechanics and Thermodynamics. [<a href="https://repository.up.ac.za/bitstream/handle/2263/62388/Ji_Computational_2017.pdf?sequence=1">paper</a>][<a href="bib/ji2017computational.bib">bibtex</a>]
-                </td>
-              </tr>
-              
-            </tbody></table>
-
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-                <td style="padding:20px;padding-top:10px;width:100%;vertical-align:middle">
-                  <heading><strong>Talks</strong></heading>
-                </td>
-            </tbody></table>
-
-            November 22, 2021, CLUNCH (University of Pennsylvania), Investigate Procedural Events in a Multimodal Fashion
-
-          </td>
+          <!-- Acknowledgements -->
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+              <td><br>
+              <p align="right">
+              <font size="2">
+              Website source from <a href="https://jonbarron.info">Jon Barron</a>.
+          </tr>
+          </table>
         </td>
-    </tbody></table>
-  </div>
-</div>
-</body>
-
-</html>
+      </tr>
+    </table>
+  </body>
+<script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh-oh'},{'server':'p3plzcpnl472835'},{'id':'7914943'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html>
