--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp; / &nbsp; <a href="https://github.com/YueYANG1996">GitHub</a> &nbsp; / &nbsp; <a href="linkedin.com/in/yue-yang-4b2075174">LinkedIn</a> &nbsp; / &nbsp; <a href="https://www.youtube.com/channel/UCRV7M6KW5BZptw_aP0A-JuA">Youtube</a> &nbsp; / &nbsp; <a href="https://www.pixiv.net/users/14283763">pixiv</a> &nbsp; / &nbsp; <a href="cv.pdf">CV</a>
             </td>
             <td width="40%">
-              <img src="images/portrait.jpg" width="90%">
+              <img src="images/portrait.jpg" width="100%">
             </td>
           </tr>
           </table>
@@ -61,7 +61,7 @@
             </tr>
             <tr>
               <td width="40%">
-                <img src="images/pipeline_small.pdf" width="100%">
+                <img src="images/IER.png" width="100%">
               </td>
               <td width="60%" valign="middle">
                 <div class="title">
@@ -91,7 +91,7 @@
                     <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
                 </div>
                 <div class="venue">
-                  <i>Conference on Empirical Methods in Natural Language Processing(<b>EMNLP</b>)</i>, 2021
+                  <i>Conference on Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2021
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2104.05845">arxiv</a> / 
