--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>About me</heading><br><br>
-                <p class="light"><em>Hi!</em>  My name is Yue Yang (杨樾). I am a second year PhD student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
+                <p class="light"><em>Hi!</em>  Hi! My name is Yue Yang (杨樾). I am a second-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
                 </p>
-                <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focus on the schema induction via multimodal information.
-                </p>
-                <p>
-                  Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. During undergrads, I worked with <a href="https://person.zju.edu.cn/en/0010729"> Prof. Yuqi Huang</a> to study Computational Fluid Dynamics (CFD).
+                <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focuses on schema induction via multimodal information.
                 </p>
                 <p>
-                  I was initially admitted by Penn as a master student in <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/"> Robotics</a> in 2018. Now I switch to Artificial Intelligence and temporarily farewell to the hardware (Not completely True, I designed a sensor pack for R2D2 which will be used by students of <a href="http://artificial-intelligence-class.org/r2d2_assignments/20fall/hw0/sensor-pack-setup.html"> CIS-521</a>).
+                  Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. I worked with <a href="https://person.zju.edu.cn/en/0010729"> Prof. Yuqi Huang</a> to study Computational Fluid Dynamics (CFD) during undergrads.
+                </p>
+                <p>
+                  Penn initially admitted me as a master's student in <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/"> Robotics</a> in 2018. Now I switch to Artificial Intelligence and temporarily farewell to the hardware (Not wholly True, I designed a sensor pack for R2D2, which students of <a href="http://artificial-intelligence-class.org/r2d2_assignments/20fall/hw0/sensor-pack-setup.html"> CIS-521</a>) will use).
                 </p>
             </td>
           </tr>
