--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                   <i>Preprint</i>, 2021
                 </div>
                 <div class="tags">
-                  <a href="https://arxiv.org/abs/2111.09276">arxiv</a>
+                  <a href="https://arxiv.org/abs/2111.09276">arxiv</a> /
+                  <a href="bib/yang2021induce.bib">bibtex</a>
                 </div>
                 <div>
                   TL;DR: This work proposes the Visual Goal-Step Inference (VGSI) task where a model is given a textual goal and must choose a plausible step towards that goal from among four candidate images.
@@ -107,6 +108,8 @@
                 </div>
               </td>
             </tr>
+
+            Past work on CFD:
           </table>
 
           <!-- Acknowledgements -->
