--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <tr>
             <td width="100%" valign="middle">
               <heading>About me</heading><br><br>
-                <p class="light"><em>Hi!</em>  Hi! My name is Yue Yang (杨樾). I am a second-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
+                <p class="light">Hi! My name is Yue Yang (杨樾). I am a second-year Ph.D. student in Computer and Information Science at the University of Pennsylvania, affiliated with <a href="https://nlp.cis.upenn.edu">Penn NLP</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="http://markyatskar.com">Prof. Mark Yatskar</a>. 
                 </p>
                 <p> I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV), aka <a href="https://en.wikipedia.org/wiki/Multimodality">Multimodal</a>. My current research focuses on schema induction via multimodal information.
                 </p>
@@ -60,10 +60,10 @@
               </td>
             </tr>
             <tr>
-              <td width="40%">
+              <td width="30%">
                 <img src="images/IER.png" width="100%">
               </td>
-              <td width="60%" valign="middle">
+              <td width="70%" valign="middle">
                 <div class="title">
                   <a href="papers/IER.pdf"><b>Induce, Edit, Retrieve: Language Grounded Multimodal Schema for Instructional Video Retrieval</b></a>
                 </div>
@@ -84,10 +84,10 @@
             </tr>
 
             <tr>
-              <td width="40%">
+              <td width="30%">
                 <img src="images/VGSI.png" width="100%">
               </td>
-              <td width="60%" valign="middle">
+              <td width="70%" valign="middle">
                 <div class="title">
                   <a href="papers/VGSI.pdf"><b>Visual Goal-Step Inference using wikiHow</b></a>
                 </div>
@@ -108,6 +108,8 @@
                 </div>
               </td>
             </tr>
+
+
           </table>
 
           <!-- Acknowledgements -->
